# aletheia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  build_deploy.sh  config.toml  pr_check.sh  pyproject.toml  setup.py
aletheia/: __init__.py  __main__.py  command.py  exceptions.py  pipeline.py  utils.py
aletheia/builders/: plantuml.py  sphinx.py
aletheia/builders/sphinx_templates/: layout.html
aletheia/converters/: hugoify.py  noop.py  pandoc.py  subdir.py
aletheia/error_templates/: hugo.md.j2
aletheia/sources/: confluence.py  empty.py  git.py  github.py  googledrive.py  local.py
docs/: _index.md  plugins.md  tutorial.md
tests/: test_aletheia.py
